--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -1,9 +1,60 @@
-#modal{
+@import url('../../cssGlobals/colors.css');
+.modal{
     width: 60%;
     height: 80%;
-    background-color: grey;
+    background-image: url('/img/bg2.png');
+    border-radius: 3px;
+    border: 3px solid var(--primary);
+    padding: 1em;
+    &.open{
+        display: block;
+    }
+    &.closed{
+        display: none;
+    }
+    /**Center it**/
+    position: absolute;
+    left: 50%;
+    top: 50%;
+  
+    transform: translate(-50%, -50%);
+
 }
+.modal-close-button{
+    position: absolute;
+    top: -15px;
+    right: -15px;
+    font-size: 25px;
+    cursor: pointer;
+    background-color: white;
+    cursor: pointer;
+    border-radius: 15px;
+    z-index: 2;
+    &:hover{
+        color: var(--third);
+    }
+}
+
 #modal-container{
     width: 100vw;
     height:100vh;
+}
+.modal-content{
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+.modal-openifier{
+    /**Center it**/
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+
+    display: flex;
+    flex-direction: column;
+}
+.tabs-open{
+    margin: 1em;
 }
